[gd_scene load_steps=24 format=4 uid="uid://dmxfdjf4ton2o"]

[ext_resource type="Script" path="res://scripts/game_window.gd" id="1_0rfml"]
[ext_resource type="PackedScene" uid="uid://n43ef13rao3h" path="res://scenes/enemies/enemy.tscn" id="2_04xhg"]
[ext_resource type="Texture2D" uid="uid://cbd7sikanj1cn" path="res://assets/32rogues/tiles.png" id="2_kiygc"]
[ext_resource type="Script" path="res://scripts/grid.gd" id="4_pskgn"]
[ext_resource type="Texture2D" uid="uid://mvb14focjy1s" path="res://assets/32rogues/borders/border6new3.png" id="5_bfbau"]
[ext_resource type="PackedScene" uid="uid://crnr4fjuk2nsl" path="res://scenes/timer.tscn" id="5_lkr4m"]
[ext_resource type="FontFile" uid="uid://bfq4w63uob47b" path="res://assets/alagard.ttf" id="5_pg7vj"]
[ext_resource type="PackedScene" uid="uid://coxtxpj8ay5h5" path="res://scenes/player.tscn" id="7_2hndj"]
[ext_resource type="Texture2D" uid="uid://m3vjmbmur66h" path="res://assets/32rogues/pieces/health_potion.png" id="9_d7cj6"]
[ext_resource type="Texture2D" uid="uid://biju2ndfvcy86" path="res://assets/32rogues/pieces/rage_ver1.png" id="9_k5q0v"]
[ext_resource type="Texture2D" uid="uid://u775rcwdc28k" path="res://assets/32rogues/pieces/antivenom_potion.png" id="10_x7hk7"]
[ext_resource type="Texture2D" uid="uid://bxfk20l7rw1x2" path="res://assets/32rogues/pieces/strenght_potion.png" id="11_7i0tj"]
[ext_resource type="Script" path="res://scripts/wait_time.gd" id="11_ih4n0"]
[ext_resource type="PackedScene" uid="uid://covxy0k6qglqu" path="res://scenes/slot/slot_machine.tscn" id="12_8bcan"]
[ext_resource type="Texture2D" uid="uid://dmdome0cw4agd" path="res://assets/32rogues/pieces/shield.png" id="13_4f4qt"]
[ext_resource type="PackedScene" uid="uid://cpqr57jvspow8" path="res://scenes/GUI/player_died.tscn" id="13_wcutr"]
[ext_resource type="PackedScene" uid="uid://bjjktcnjegl47" path="res://scenes/GUI/player_win.tscn" id="14_w782t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jqs4y"]
texture = ExtResource("2_kiygc")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
0:4/0 = 0
1:4/0 = 0
0:5/0 = 0
1:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
0:18/0 = 0
1:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
0:20/0 = 0
1:20/0 = 0
0:21/0 = 0
1:21/0 = 0
0:22/0 = 0
1:22/0 = 0

[sub_resource type="TileSet" id="TileSet_5mgtx"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_jqs4y")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lk2h3"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ka8sp"]
bg_color = Color(0.679688, 0.0398254, 0.0398254, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljvo6"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xy5q"]
bg_color = Color(0.568627, 0.239216, 0.00392157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GameWindow" type="Node2D"]
script = ExtResource("1_0rfml")

[node name="Background" type="Node2D" parent="."]

[node name="F1" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F1"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAYAAAD6////AAAAAAEAAAD6/wAAAAAAAAEAAAD6/wEAAAABAAEAAAD6/wIAAAAAAAYAAAD6/wMAAAAAAAYAAAD6/wQAAAAAAAYAAAD6/wUAAAAAAAYAAAD6/wYAAAAAAAYAAAD6/wcAAAAAAAYAAAD7////AAAAAAEAAAD7/wAAAAAAAAEAAAD7/wEAAAABAAEAAAD7/wIAAAAAAAYAAAD7/wMAAAAAAAYAAAD7/wQAAAACAAcAAAD7/wUAAAAAAAYAAAD7/wcAAAAAAAYAAAD8////AAAAAAEAAAD8/wAAAAAAAAEAAAD8/wEAAAABAAEAAAD8/wIAAAAAAAYAAAD8/wMAAAAAAAYAAAD8/wQAAAAAAAYAAAD8/wUAAAACAAoAAAD8/wYAAAAAAAYAAAD8/wcAAAAAAAYAAAD9////AAAAAAEAAAD9/wAAAAAAAAEAAAD9/wEAAAABAAEAAAD9/wIAAAACAAcAAAD9/wMAAAAAAAYAAAD9/wQAAAAAAAYAAAD9/wUAAAAAAAYAAAD9/wYAAAAAAAYAAAD9/wcAAAAAAAYAAAD+////AAAAAAEAAAD+/wAAAAAAAAEAAAD+/wEAAAABAAEAAAD+/wIAAAAAAAYAAAD+/wMAAAAAAAYAAAD+/wQAAAAAAAYAAAD+/wUAAAAAAAYAAAD+/wYAAAAAAAYAAAD+/wcAAAAAAAYAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAABAAEAAAD//wIAAAAAAAYAAAD//wMAAAADAAYAAAD//wQAAAAAAAYAAAD//wUAAAAAAAYAAAD//wYAAAAAAAYAAAD//wcAAAAAAAYAAAAAAP//AAAAAAEAAAAAAAAAAAAAAAEAAAAAAAEAAAABAAEAAAAAAAIAAAAAAAYAAAAAAAMAAAAAAAYAAAAAAAQAAAAAAAYAAAAAAAUAAAAAAAYAAAAAAAYAAAAAAAYAAAAAAAcAAAAAAAYAAAABAP//AAAAAAEAAAABAAAAAAAAAAEAAAABAAEAAAABAAEAAAABAAIAAAAAAAYAAAABAAMAAAAAAAYAAAABAAQAAAACAAkAAAABAAUAAAAAAAYAAAABAAYAAAAAAAYAAAABAAcAAAAAAAYAAAACAP//AAAAAAEAAAACAAAAAAAAAAEAAAACAAEAAAABAAEAAAACAAIAAAAAAAYAAAACAAMAAAAAAAYAAAACAAQAAAAAAAYAAAACAAUAAAAAAAYAAAACAAYAAAAAAAYAAAACAAcAAAAAAAYAAAADAP//AAAAAAEAAAADAAAAAAAAAAEAAAADAAEAAAABAAEAAAADAAIAAAADAAkAAAADAAMAAAAAAAYAAAADAAQAAAAAAAYAAAADAAUAAAADAAoAAAADAAYAAAAAAAYAAAADAAcAAAAAAAYAAAAEAP//AAAAAAEAAAAEAAAAAAAAAAEAAAAEAAEAAAABAAEAAAAEAAIAAAAAAAYAAAAEAAMAAAAAAAYAAAAEAAQAAAAAAAYAAAAEAAUAAAAAAAYAAAAEAAYAAAAAAAYAAAAEAAcAAAAAAAYAAAAFAP//AAAAAAEAAAAFAAAAAAAAAAEAAAAFAAEAAAABAAEAAAAFAAIAAAAAAAYAAAAFAAMAAAAAAAYAAAAFAAQAAAAAAAYAAAAFAAUAAAAAAAYAAAAFAAYAAAAAAAYAAAAFAAcAAAAAAAYAAAAGAP//AAAAAAEAAAAGAAAAAAAAAAEAAAAGAAEAAAABAAEAAAAGAAIAAAAAAAYAAAAGAAMAAAAAAAYAAAAGAAQAAAAAAAYAAAAGAAUAAAAAAAYAAAAGAAYAAAAAAAYAAAAGAAcAAAAAAAYAAAAHAP//AAAAAAEAAAAHAAAAAAAAAAEAAAAHAAEAAAABAAEAAAAHAAIAAAACAAcAAAAHAAMAAAAAAAYAAAAHAAQAAAADAAYAAAAHAAUAAAAAAAYAAAAHAAYAAAAAAAYAAAAHAAcAAAAAAAYAAAAIAP//AAAAAAEAAAAIAAAAAAAAAAEAAAAIAAEAAAABAAEAAAAIAAIAAAAAAAYAAAAIAAMAAAAAAAYAAAAIAAQAAAAAAAYAAAAIAAUAAAAAAAYAAAAIAAYAAAAAAAYAAAAIAAcAAAAAAAYAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F1/Dungeon1"]
tile_map_data = PackedByteArray("AAD9/wEAAAAGABAAAAAEAAIAAAAHABAAAAD//wIAAAAEABEAAAD//wUAAAABABYAAAACAAMAAAAAABQAAAADAAQAAAABABUAAAD8/wMAAAAAABUAAAABAAYAAAAKABMAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="F2" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F2"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAA8AAAD6////AAAAAAMAAAD6/wAAAAAAAAMAAAD6/wEAAAABAAMAAAD6/wIAAAAAAA8AAAD6/wMAAAAAAA8AAAD6/wQAAAAAAA8AAAD6/wUAAAAAAA8AAAD6/wYAAAAAAA8AAAD6/wcAAAAAAA8AAAD7////AAAAAAMAAAD7/wAAAAAAAAMAAAD7/wEAAAABAAMAAAD7/wIAAAAAAA8AAAD7/wMAAAAAAA8AAAD7/wQAAAAAAA8AAAD7/wUAAAAAAA8AAAD7/wcAAAAAAA8AAAD8////AAAAAAMAAAD8/wAAAAAAAAMAAAD8/wEAAAABAAMAAAD8/wIAAAAAAA8AAAD8/wMAAAAAAA8AAAD8/wQAAAAAAA8AAAD8/wUAAAAAAA8AAAD8/wYAAAAAAA8AAAD8/wcAAAAAAA8AAAD9////AAAAAAMAAAD9/wAAAAAAAAMAAAD9/wEAAAABAAMAAAD9/wIAAAAAAA8AAAD9/wMAAAAAAA8AAAD9/wQAAAAAAA8AAAD9/wUAAAAAAA8AAAD9/wYAAAAAAA8AAAD9/wcAAAAAAA8AAAD+////AAAAAAMAAAD+/wAAAAAAAAMAAAD+/wEAAAABAAMAAAD+/wIAAAAAAA8AAAD+/wMAAAAAAA8AAAD+/wQAAAAAAA8AAAD+/wUAAAAAAA8AAAD+/wYAAAAAAA8AAAD+/wcAAAAAAA8AAAD/////AAAAAAMAAAD//wAAAAAAAAMAAAD//wEAAAABAAMAAAD//wIAAAAAAA8AAAD//wMAAAAAAA8AAAD//wQAAAAAAA8AAAD//wUAAAAAAA8AAAD//wYAAAAAAA8AAAD//wcAAAAAAA8AAAAAAP//AAAAAAMAAAAAAAAAAAAAAAMAAAAAAAEAAAABAAMAAAAAAAIAAAAAAA8AAAAAAAMAAAAAAA8AAAAAAAQAAAAAAA8AAAAAAAUAAAAAAA8AAAAAAAYAAAAAAA8AAAAAAAcAAAAAAA8AAAABAP//AAAAAAMAAAABAAAAAAAAAAMAAAABAAEAAAABAAMAAAABAAIAAAAAAA8AAAABAAMAAAAAAA8AAAABAAQAAAAAAA8AAAABAAUAAAAAAA8AAAABAAYAAAAAAA8AAAABAAcAAAAAAA8AAAACAP//AAAAAAMAAAACAAAAAAAAAAMAAAACAAEAAAABAAMAAAACAAIAAAAAAA8AAAACAAMAAAAAAA8AAAACAAQAAAAAAA8AAAACAAUAAAAAAA8AAAACAAYAAAAAAA8AAAACAAcAAAAAAA8AAAADAP//AAAAAAMAAAADAAAAAAAAAAMAAAADAAEAAAABAAMAAAADAAIAAAAAAA8AAAADAAMAAAAAAA8AAAADAAQAAAAAAA8AAAADAAUAAAAAAA8AAAADAAYAAAAAAA8AAAADAAcAAAAAAA8AAAAEAP//AAAAAAMAAAAEAAAAAAAAAAMAAAAEAAEAAAABAAMAAAAEAAIAAAAAAA8AAAAEAAMAAAAAAA8AAAAEAAQAAAAAAA8AAAAEAAUAAAAAAA8AAAAEAAYAAAAAAA8AAAAEAAcAAAAAAA8AAAAFAP//AAAAAAMAAAAFAAAAAAAAAAMAAAAFAAEAAAABAAMAAAAFAAIAAAAAAA8AAAAFAAMAAAAAAA8AAAAFAAQAAAAAAA8AAAAFAAUAAAAAAA8AAAAFAAYAAAAAAA8AAAAFAAcAAAAAAA8AAAAGAP//AAAAAAMAAAAGAAAAAAAAAAMAAAAGAAEAAAABAAMAAAAGAAIAAAAAAA8AAAAGAAMAAAAAAA8AAAAGAAQAAAAAAA8AAAAGAAUAAAAAAA8AAAAGAAYAAAAAAA8AAAAGAAcAAAAAAA8AAAAHAP//AAAAAAMAAAAHAAAAAAAAAAMAAAAHAAEAAAABAAMAAAAHAAIAAAAAAA8AAAAHAAMAAAAAAA8AAAAHAAQAAAAAAA8AAAAHAAUAAAAAAA8AAAAHAAYAAAAAAA8AAAAHAAcAAAAAAA8AAAAIAP//AAAAAAMAAAAIAAAAAAAAAAMAAAAIAAEAAAABAAMAAAAIAAIAAAAAAA8AAAAIAAMAAAAAAA8AAAAIAAQAAAAAAA8AAAAIAAUAAAAAAA8AAAAIAAYAAAAAAA8AAAAIAAcAAAAAAA8AAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F2/Dungeon1"]
tile_map_data = PackedByteArray("AAD+/wEAAAAFABAAAAD8/wIAAAAHABAAAAAEAAIAAAACABEAAAAHAAIAAAAEABMAAAADAAYAAAABABMAAAD//wIAAAAAABMAAAD8/wMAAAADABMAAAAHAAQAAAABABUAAAD//wQAAAABABQAAAAAAAYAAAACABMAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="F3" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F3"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAcAAAD6////AAAAAAUAAAD6/wAAAAAAAAUAAAD6/wEAAAABAAUAAAD6/wIAAAAAAAcAAAD6/wMAAAAAAAcAAAD6/wQAAAAAAAcAAAD6/wUAAAAAAAcAAAD6/wYAAAAAAAcAAAD6/wcAAAAAAAcAAAD7////AAAAAAUAAAD7/wAAAAAAAAUAAAD7/wEAAAABAAUAAAD7/wIAAAAAAAcAAAD7/wMAAAAAAAcAAAD7/wQAAAAAAAcAAAD7/wUAAAAAAAcAAAD7/wcAAAAAAAcAAAD8////AAAAAAUAAAD8/wAAAAAAAAUAAAD8/wEAAAABAAUAAAD8/wIAAAAAAAcAAAD8/wMAAAAAAAcAAAD8/wQAAAAAAAcAAAD8/wUAAAAAAAcAAAD8/wYAAAAAAAcAAAD8/wcAAAAAAAcAAAD9////AAAAAAUAAAD9/wAAAAAAAAUAAAD9/wEAAAABAAUAAAD9/wIAAAAAAAcAAAD9/wMAAAAAAAcAAAD9/wQAAAAAAAcAAAD9/wUAAAAAAAcAAAD9/wYAAAAAAAcAAAD9/wcAAAAAAAcAAAD+////AAAAAAUAAAD+/wAAAAAAAAUAAAD+/wEAAAABAAUAAAD+/wIAAAAAAAcAAAD+/wMAAAAAAAcAAAD+/wQAAAAAAAcAAAD+/wUAAAAAAAcAAAD+/wYAAAAAAAcAAAD+/wcAAAAAAAcAAAD/////AAAAAAUAAAD//wAAAAAAAAUAAAD//wEAAAABAAUAAAD//wIAAAAAAAcAAAD//wMAAAAAAAcAAAD//wQAAAAAAAcAAAD//wUAAAAAAAcAAAD//wYAAAAAAAcAAAD//wcAAAAAAAcAAAAAAP//AAAAAAUAAAAAAAAAAAAAAAUAAAAAAAEAAAABAAUAAAAAAAIAAAAAAAcAAAAAAAMAAAAAAAcAAAAAAAQAAAAAAAcAAAAAAAUAAAAAAAcAAAAAAAYAAAAAAAcAAAAAAAcAAAAAAAcAAAABAP//AAAAAAUAAAABAAAAAAAAAAUAAAABAAEAAAABAAUAAAABAAIAAAAAAAcAAAABAAMAAAAAAAcAAAABAAQAAAAAAAcAAAABAAUAAAAAAAcAAAABAAYAAAAAAAcAAAABAAcAAAAAAAcAAAACAP//AAAAAAUAAAACAAAAAAAAAAUAAAACAAEAAAABAAUAAAACAAIAAAAAAAcAAAACAAMAAAAAAAcAAAACAAQAAAAAAAcAAAACAAUAAAAAAAcAAAACAAYAAAAAAAcAAAACAAcAAAAAAAcAAAADAP//AAAAAAUAAAADAAAAAAAAAAUAAAADAAEAAAABAAUAAAADAAIAAAAAAAcAAAADAAMAAAAAAAcAAAADAAQAAAAAAAcAAAADAAUAAAAAAAcAAAADAAYAAAAAAAcAAAADAAcAAAAAAAcAAAAEAP//AAAAAAUAAAAEAAAAAAAAAAUAAAAEAAEAAAABAAUAAAAEAAIAAAAAAAcAAAAEAAMAAAAAAAcAAAAEAAQAAAAAAAcAAAAEAAUAAAAAAAcAAAAEAAYAAAAAAAcAAAAEAAcAAAAAAAcAAAAFAP//AAAAAAUAAAAFAAAAAAAAAAUAAAAFAAEAAAABAAUAAAAFAAIAAAAAAAcAAAAFAAMAAAAAAAcAAAAFAAQAAAAAAAcAAAAFAAUAAAAAAAcAAAAFAAYAAAAAAAcAAAAFAAcAAAAAAAcAAAAGAP//AAAAAAUAAAAGAAAAAAAAAAUAAAAGAAEAAAABAAUAAAAGAAIAAAAAAAcAAAAGAAMAAAAAAAcAAAAGAAQAAAAAAAcAAAAGAAUAAAAAAAcAAAAGAAYAAAAAAAcAAAAGAAcAAAAAAAcAAAAHAP//AAAAAAUAAAAHAAAAAAAAAAUAAAAHAAEAAAABAAUAAAAHAAIAAAAAAAcAAAAHAAMAAAAAAAcAAAAHAAQAAAAAAAcAAAAHAAUAAAAAAAcAAAAHAAYAAAAAAAcAAAAHAAcAAAAAAAcAAAAIAP//AAAAAAUAAAAIAAAAAAAAAAUAAAAIAAEAAAABAAUAAAAIAAIAAAAAAAcAAAAIAAMAAAAAAAcAAAAIAAQAAAAAAAcAAAAIAAUAAAAAAAcAAAAIAAYAAAAAAAcAAAAIAAcAAAAAAAcAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F3/Dungeon1"]
tile_map_data = PackedByteArray("AAD9/wIAAAAHABAAAAAFAAEAAAAFABAAAAD//wMAAAAAABYAAAD8/wMAAAABABYAAAD8/wUAAAABABUAAAAEAAIAAAABABUAAAAHAAIAAAAFABEAAAADAAYAAAAKABMAAAAHAAUAAAAKABMAAAADAAQAAAAGAAoAAAABAAYAAAAGAAoAAAD//wIAAAAEAAoAAAD8/wIAAAAFAAoAAAD//wEAAAAGABAAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="F4" type="Node2D" parent="Background"]
visible = false

[node name="Dungeon1" type="TileMapLayer" parent="Background/F4"]
position = Vector2(12, -28)
scale = Vector2(5, 5)
tile_map_data = PackedByteArray("AAD7/wYAAAAAAAsAAAD6////AAAAAAQAAAD6/wAAAAAAAAQAAAD6/wEAAAABAAQAAAD6/wIAAAAAAAsAAAD6/wMAAAAAAAsAAAD6/wQAAAAAAAsAAAD6/wUAAAAAAAsAAAD6/wYAAAAAAAsAAAD6/wcAAAAAAAsAAAD7////AAAAAAQAAAD7/wAAAAAAAAQAAAD7/wEAAAABAAQAAAD7/wIAAAAAAAsAAAD7/wMAAAAAAAsAAAD7/wQAAAAAAAsAAAD7/wUAAAAAAAsAAAD7/wcAAAAAAAsAAAD8////AAAAAAQAAAD8/wAAAAAAAAQAAAD8/wEAAAABAAQAAAD8/wIAAAAAAAsAAAD8/wMAAAAAAAsAAAD8/wQAAAAAAAsAAAD8/wUAAAAAAAsAAAD8/wYAAAAAAAsAAAD8/wcAAAAAAAsAAAD9////AAAAAAQAAAD9/wAAAAAAAAQAAAD9/wEAAAABAAQAAAD9/wIAAAAAAAsAAAD9/wMAAAAAAAsAAAD9/wQAAAAAAAsAAAD9/wUAAAAAAAsAAAD9/wYAAAAAAAsAAAD9/wcAAAAAAAsAAAD+////AAAAAAQAAAD+/wAAAAAAAAQAAAD+/wEAAAABAAQAAAD+/wIAAAAAAAsAAAD+/wMAAAAAAAsAAAD+/wQAAAAAAAsAAAD+/wUAAAAAAAsAAAD+/wYAAAAAAAsAAAD+/wcAAAAAAAsAAAD/////AAAAAAQAAAD//wAAAAAAAAQAAAD//wEAAAABAAQAAAD//wIAAAAAAAsAAAD//wMAAAAAAAsAAAD//wQAAAAAAAsAAAD//wUAAAAAAAsAAAD//wYAAAAAAAsAAAD//wcAAAAAAAsAAAAAAP//AAAAAAQAAAAAAAAAAAAAAAQAAAAAAAEAAAABAAQAAAAAAAIAAAAAAAsAAAAAAAMAAAAAAAsAAAAAAAQAAAAAAAsAAAAAAAUAAAAAAAsAAAAAAAYAAAAAAAsAAAAAAAcAAAAAAAsAAAABAP//AAAAAAQAAAABAAAAAAAAAAQAAAABAAEAAAABAAQAAAABAAIAAAAAAAsAAAABAAMAAAAAAAsAAAABAAQAAAAAAAsAAAABAAUAAAAAAAsAAAABAAYAAAAAAAsAAAABAAcAAAAAAAsAAAACAP//AAAAAAQAAAACAAAAAAAAAAQAAAACAAEAAAABAAQAAAACAAIAAAAAAAsAAAACAAMAAAAAAAsAAAACAAQAAAAAAAsAAAACAAUAAAAAAAsAAAACAAYAAAAAAAsAAAACAAcAAAAAAAsAAAADAP//AAAAAAQAAAADAAAAAAAAAAQAAAADAAEAAAABAAQAAAADAAIAAAAAAAsAAAADAAMAAAAAAAsAAAADAAQAAAAAAAsAAAADAAUAAAAAAAsAAAADAAYAAAAAAAsAAAADAAcAAAAAAAsAAAAEAP//AAAAAAQAAAAEAAAAAAAAAAQAAAAEAAEAAAABAAQAAAAEAAIAAAAAAAsAAAAEAAMAAAAAAAsAAAAEAAQAAAAAAAsAAAAEAAUAAAAAAAsAAAAEAAYAAAAAAAsAAAAEAAcAAAAAAAsAAAAFAP//AAAAAAQAAAAFAAAAAAAAAAQAAAAFAAEAAAABAAQAAAAFAAIAAAAAAAsAAAAFAAMAAAAAAAsAAAAFAAQAAAAAAAsAAAAFAAUAAAAAAAsAAAAFAAYAAAAAAAsAAAAFAAcAAAAAAAsAAAAGAP//AAAAAAQAAAAGAAAAAAAAAAQAAAAGAAEAAAABAAQAAAAGAAIAAAAAAAsAAAAGAAMAAAAAAAsAAAAGAAQAAAAAAAsAAAAGAAUAAAAAAAsAAAAGAAYAAAAAAAsAAAAGAAcAAAAAAAsAAAAHAP//AAAAAAQAAAAHAAAAAAAAAAQAAAAHAAEAAAABAAQAAAAHAAIAAAAAAAsAAAAHAAMAAAAAAAsAAAAHAAQAAAAAAAsAAAAHAAUAAAAAAAsAAAAHAAYAAAAAAAsAAAAHAAcAAAAAAAsAAAAIAP//AAAAAAQAAAAIAAAAAAAAAAQAAAAIAAEAAAABAAQAAAAIAAIAAAAAAAsAAAAIAAMAAAAAAAsAAAAIAAQAAAAAAAsAAAAIAAUAAAAAAAsAAAAIAAYAAAAAAAsAAAAIAAcAAAAAAAsAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="DungeonTilesDetails" type="TileMapLayer" parent="Background/F4/Dungeon1"]
tile_map_data = PackedByteArray("AAD+/wEAAAADABAAAAAGAAEAAAADABAAAAAEAAIAAAAHABAAAAD8/wIAAAAEABEAAAAHAAIAAAACABEAAAD//wIAAAADAAsAAAD8/wMAAAABAAsAAAACAAYAAAADAAsAAAAEAAQAAAACAAsAAAAHAAMAAAABAAsAAAD//wMAAAAGAAoAAAADAAYAAAAFAAoAAAD8/wUAAAABABUAAAD+/wIAAAABABYAAAAAAAYAAAAAABYAAAA=")
tile_set = SubResource("TileSet_5mgtx")

[node name="Player" parent="." instance=ExtResource("7_2hndj")]
z_index = 1
position = Vector2(-282, 735)

[node name="Enemy" parent="." instance=ExtResource("2_04xhg")]
z_index = 1
position = Vector2(921, 735)

[node name="GamePanel" type="Panel" parent="."]
modulate = Color(0, 0, 0, 0.905882)
offset_top = 42.0
offset_right = 576.0
offset_bottom = 900.0

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.674815, 0.674815, 0.674814, 1)
offset_left = -18.0
offset_top = 28.0
offset_right = 594.0
offset_bottom = 914.0
texture = ExtResource("5_bfbau")

[node name="EnemyTypeLabel" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 206.5
offset_top = 62.0
offset_right = 369.5
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_pg7vj")
theme_override_font_sizes/font_size = 64
text = "Enemy"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" parent="EnemyTypeLabel" instance=ExtResource("5_lkr4m")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 60.5
offset_bottom = 60.5

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("4_pskgn")
width = 8
height = 10
x_start = 64
y_start = 800
offset = 64
y_offset = 5

[node name="DestroyTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="CollapseTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="RefillTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(288, 512)

[node name="Resolution" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
offset_left = -876.0
offset_top = -105.0
offset_right = 1459.0
offset_bottom = 1143.0

[node name="ResolutionText" type="Label" parent="Resolution"]
unique_name_in_owner = true
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -277.0
offset_right = 280.0
offset_bottom = -157.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_pg7vj")
theme_override_font_sizes/font_size = 128
text = "You Died!"

[node name="Inventory" type="Node2D" parent="."]
position = Vector2(-337, 9)

[node name="InventoryGrid" type="HBoxContainer" parent="Inventory"]
offset_left = -305.0
offset_top = 16.0
offset_right = -33.0
offset_bottom = 101.0
theme_override_constants/separation = 1
alignment = 1

[node name="Button" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Inventory/InventoryGrid/Button"]
position = Vector2(45, 36)
scale = Vector2(4, 4)
texture = ExtResource("9_d7cj6")

[node name="Button2" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="Inventory/InventoryGrid/Button2"]
position = Vector2(43, 36)
scale = Vector2(4, 4)
texture = ExtResource("10_x7hk7")

[node name="Button3" type="Button" parent="Inventory/InventoryGrid"]
custom_minimum_size = Vector2(85, 85)
layout_mode = 2

[node name="Sprite2D2" type="Sprite2D" parent="Inventory/InventoryGrid/Button3"]
position = Vector2(43, 39)
scale = Vector2(4, 4)
texture = ExtResource("11_7i0tj")

[node name="WaitTime" type="Control" parent="."]
process_mode = 2
visible = false
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -14.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_ih4n0")

[node name="WaitTimePanel" type="Panel" parent="WaitTime"]
layout_mode = 0
offset_left = -941.0
offset_top = -186.0
offset_right = 1466.0
offset_bottom = 1242.0

[node name="WaitTimeLabel" type="Label" parent="WaitTime/WaitTimePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -23.5
offset_top = -100.0
offset_right = 110.5
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_pg7vj")
theme_override_font_sizes/font_size = 256
text = "0	"
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 1

[node name="WaitTimeTimer" type="Timer" parent="WaitTime"]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="Hud" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerHealth" type="ProgressBar" parent="Hud"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -470.0
offset_top = 970.0
offset_right = -303.0
offset_bottom = 987.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_lk2h3")
theme_override_styles/fill = SubResource("StyleBoxFlat_ka8sp")
value = 50.0
show_percentage = false

[node name="PlayerHealthLabel" type="Label" parent="Hud/PlayerHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -6.5
offset_right = 14.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_pg7vj")
text = "100"
horizontal_alignment = 1

[node name="PlayerShield" type="Sprite2D" parent="Hud/PlayerHealth"]
unique_name_in_owner = true
position = Vector2(178.667, 6.5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_4f4qt")

[node name="PlayerShieldLabel" type="Label" parent="Hud/PlayerHealth/PlayerShield"]
unique_name_in_owner = true
offset_left = -7.22251
offset_top = -5.83333
offset_right = 11.7775
offset_bottom = 17.1667
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("5_pg7vj")
text = "20"
horizontal_alignment = 1

[node name="PlayerRage" type="ProgressBar" parent="Hud"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -544.0
offset_top = 954.0
offset_right = -377.0
offset_bottom = 971.0
rotation = -1.5708
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_ljvo6")
theme_override_styles/fill = SubResource("StyleBoxFlat_4xy5q")
max_value = 2.0
step = 0.2
show_percentage = false

[node name="RageVer1" type="Sprite2D" parent="Hud/PlayerRage"]
position = Vector2(-16, 9)
rotation = 1.5708
scale = Vector2(1.5, 1.5)
texture = ExtResource("9_k5q0v")

[node name="EnemyHealth" type="ProgressBar" parent="Hud"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 730.0
offset_top = 970.0
offset_right = 897.0
offset_bottom = 987.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)
theme_override_styles/background = SubResource("StyleBoxFlat_lk2h3")
theme_override_styles/fill = SubResource("StyleBoxFlat_ka8sp")
value = 50.0
show_percentage = false

[node name="EnemyHealthLabel" type="Label" parent="Hud/EnemyHealth"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -14.5
offset_top = -6.5
offset_right = 14.5
offset_bottom = 16.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_pg7vj")
text = "100"
horizontal_alignment = 1

[node name="EnemyShield" type="Sprite2D" parent="Hud/EnemyHealth"]
unique_name_in_owner = true
position = Vector2(178.667, 6.5)
scale = Vector2(1.2, 1.2)
texture = ExtResource("13_4f4qt")

[node name="EnemyShieldLabel" type="Label" parent="Hud/EnemyHealth/EnemyShield"]
unique_name_in_owner = true
offset_left = -7.22251
offset_top = -5.83333
offset_right = 11.7775
offset_bottom = 17.1667
scale = Vector2(0.8, 0.8)
theme_override_fonts/font = ExtResource("5_pg7vj")
text = "20"
horizontal_alignment = 1

[node name="SlotMachine" parent="." instance=ExtResource("12_8bcan")]
visible = false
offset_left = 287.0
offset_top = 2084.0
offset_right = 287.0
offset_bottom = 2084.0
scale = Vector2(4, 4)

[node name="Continue" type="Button" parent="."]
visible = false
offset_left = 159.0
offset_top = 948.0
offset_right = 431.0
offset_bottom = 1016.0
theme_override_fonts/font = ExtResource("5_pg7vj")
theme_override_font_sizes/font_size = 64
text = "Continue"

[node name="PlayerDied" parent="." instance=ExtResource("13_wcutr")]
visible = false
offset_left = 285.0
offset_top = 514.0
offset_right = 285.0
offset_bottom = 514.0
scale = Vector2(1.2, 1.2)

[node name="Player_win" parent="." instance=ExtResource("14_w782t")]
visible = false
offset_left = 285.0
offset_top = 514.0
offset_right = 285.0
offset_bottom = 514.0
scale = Vector2(1.2, 1.2)

[connection signal="timeout" from="DestroyTimer" to="Grid" method="_on_destroy_timer_timeout"]
[connection signal="timeout" from="CollapseTimer" to="Grid" method="_on_collapse_timer_timeout"]
[connection signal="timeout" from="RefillTimer" to="Grid" method="_on_refill_timer_timeout"]
[connection signal="pressed" from="Inventory/InventoryGrid/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="WaitTime/WaitTimeTimer" to="." method="_on_wait_time_timer_timeout"]
